fix footer height on small viewports

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -7,7 +7,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 145px;
+    height: 260px;
 
     a {
         color: #fff;
@@ -34,6 +34,8 @@
     }
     .footer {
         padding: 13px 0;
+        height: 150px;
+
         div {
             padding: 0;
         }
